# attiny-dual-dice-generator

./: CMakeLists.txt  README.md
src/: main.c  shiftRegister.c  shiftRegister.h
